tests/ui/opts/17_unknown_param_lifetime.rs
use funcmap::FuncMap;

#[derive(FuncMap)]
#[funcmap(params('a))]
struct Test<T>(T);

fn main() {}
